--- a/overview/roadmap.mdx
+++ b/overview/roadmap.mdx
@@ -10,45 +10,129 @@ maxBTC is being developed through a careful, phased approach to ensure security,
 
 <Steps>
   <Step title="Q1 2025: Proof of Concept (Completed)">
-    - Strategy development and testing with JLP BTC Neutral approach
-    - 20% APY on average achieved during live testing
-    - Full strategy automation infrastructure deployed
-    - Core architecture design and implementation
+    <div className="space-y-2 mb-4">
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Strategy development and testing with JLP BTC Neutral approach</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Target ~10% APY validated during live testing</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Full strategy automation infrastructure deployed</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Core architecture design and implementation</span>
+      </div>
+    </div>
   </Step>
   
   <Step title="May 2025: Private Deposits (In Progress)">
-    - Limited access for selected partners and investors
-    - Participation from CoinFund, MEV Capital, Ouroboros, Steakhouse, and others
-    - Strategic partnerships development
-    - Legal structure finalization
+    <div className="space-y-2 mb-4">
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Limited access for selected partners and investors</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Participation from CoinFund, MEV Capital, Ouroboros, Steakhouse, and others</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Strategic partnerships development</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Legal structure finalization</span>
+      </div>
+    </div>
   </Step>
   
   <Step title="May 2025: Seed Round Funding">
-    - Strategic funding round focused on key ecosystem partners
-    - Development of growth strategy and marketing plans
-    - Investment in security infrastructure and audit processes
+    <div className="space-y-2 mb-4">
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Strategic funding round focused on key ecosystem partners</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Development of growth strategy and marketing plans</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Investment in security infrastructure and audit processes</span>
+      </div>
+    </div>
   </Step>
 
   <Step title="June 2025: Vault Pre-deposits">
-    - Partnerships with Neutron, Babylon, Etherfi and other ecosystems
-    - $100M+ launch campaign preparation
-    - DeFi integration development with key protocols
-    - End-to-end testing of withdrawal and redemption flows
+    <div className="space-y-2 mb-4">
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Partnerships with Neutron, Babylon, Etherfi and other ecosystems</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>$100M+ launch campaign preparation</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>DeFi integration development with key protocols</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>End-to-end testing of withdrawal and redemption flows</span>
+      </div>
+    </div>
   </Step>
   
   <Step title="August 2025: Public Launch">
-    - JLP BTC Neutral strategy officially launched
-    - Minting contracts deployed on Ethereum, Neutron, and BTC L2s
-    - Points/DFV incentives program
-    - Comprehensive DEX liquidity provisioning
-    - Lending market integrations
+    <div className="space-y-2 mb-4">
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>JLP BTC Neutral strategy officially launched</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Minting contracts deployed on Ethereum, Neutron, and BTC L2s</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Points/DFV incentives program</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Comprehensive DEX liquidity provisioning</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Lending market integrations</span>
+      </div>
+    </div>
   </Step>
   
   <Step title="Q3-Q4 2025: Strategy Extension">
-    - Additional CeDeFi/CeFi/TradFi strategies launched
-    - External vault manager program begins
-    - Cross-chain expansion to additional networks
-    - Enhanced DeFi integrations and yield optimization
+    <div className="space-y-2 mb-4">
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Additional CeDeFi/CeFi/TradFi strategies launched</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>External vault manager program begins</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Cross-chain expansion to additional networks</span>
+      </div>
+      <div className="flex items-start gap-3 text-sm">
+        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+        <span>Enhanced DeFi integrations and yield optimization</span>
+      </div>
+    </div>
   </Step>
 </Steps>
 
@@ -104,11 +188,28 @@ maxBTC is being developed through a careful, phased approach to ensure security,
 
 Beyond these initial milestones, maxBTC aims to:
 
-- Become the default BTC yield asset in DeFi, replacing points-based LRTs and low-yield alternatives
-- Expand to a full suite of assets beyond BTC (maxETH, etc.)
-- Enable true cross-chain composability for yield-bearing assets
-- Create a platform for external strategies to plug into the infrastructure
-- Develop advanced governance for risk management and strategy selection
+<div className="space-y-2 mb-6">
+  <div className="flex items-start gap-3 text-sm">
+    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+    <span>Become the default BTC yield asset in DeFi, replacing points-based LRTs and low-yield alternatives</span>
+  </div>
+  <div className="flex items-start gap-3 text-sm">
+    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+    <span>Expand to a full suite of assets beyond BTC (maxETH, etc.)</span>
+  </div>
+  <div className="flex items-start gap-3 text-sm">
+    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+    <span>Enable true cross-chain composability for yield-bearing assets</span>
+  </div>
+  <div className="flex items-start gap-3 text-sm">
+    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+    <span>Create a platform for external strategies to plug into the infrastructure</span>
+  </div>
+  <div className="flex items-start gap-3 text-sm">
+    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+    <span>Develop advanced governance for risk management and strategy selection</span>
+  </div>
+</div>
 
 <CardGroup cols={1}>
   <Card title="Explore JLP BTC Neutral Strategy" icon="chart-line" href="/strategy/overview">
