--- a/strategy/details.mdx
+++ b/strategy/details.mdx
@@ -144,6 +144,21 @@ Based on our 90-day proof of concept with mainnet assets, the JLP Delta Neutral 
 
 We expect long-term APY to stabilize in the 10-20% range over time, depending on market conditions.
 
+### Live Test Results
+
+During our three-month live test period starting December 24, 2024:
+
+<div className="space-y-2 mb-6">
+  <div className="flex items-start gap-3 text-sm">
+    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+    <span><strong>25% average APY</strong> (during a period of high market volatility)</span>
+  </div>
+  <div className="flex items-start gap-3 text-sm">
+    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
+    <span><strong>Rolling 30-day average APY</strong> typically fluctuated between 10% and 40%</span>
+  </div>
+</div>
+
 ## Technical Implementation
 
 ### BTC-Denominated Performance Metrics
